<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="20" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/camera_preview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:text="@string/camera_calibration_preview_text" />

            <Button
                android:id="@+id/start_camera_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dip"
                android:text="@string/camera_calibration_start_preview_text" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <TextureView
                android:id="@+id/sur_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20" />

            <TextureView
                android:id="@+id/sur_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20" />
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/txt_left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/camera_3d_calibration_left"
            android:gravity="center_horizontal|top"
            android:clickable="true"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/txt_right"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/camera_3d_calibration_right"
            android:gravity="center_horizontal|top"
            android:clickable="true"
            android:textSize="20dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:background="#a0000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/start_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/camera_btn_selector_1" >
        </Button>
    </RelativeLayout>

</LinearLayout>